# jktlug.id

./: .dockerignore  README.md  jktlug-website.cabal
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: main.yaml
.pi/: haskell-basics.md  how-it-works.md  plan.md
.pi/skills/jktlug-website/: SKILL.md
.pi/skills/tlug-website/: SKILL.md
app/: SiteCompiler.hs  Test.hs
docroot/: index.html
src/JKTLUG/: Hello.hs  HelloTest.hs  MediaWiki.hs  MediaWikiTest.hs  Parser.hs  WikiLink.hs  WikiParam.hs
template/: main.html
wiki/: Main_Page
